<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    style="@android:style/TextAppearance.Widget.TextView.SpinnerItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/top_summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dummy_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_top"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/top_summary_layout"
        android:background="#3b5998" />

    <ScrollView
        android:id="@+id/middle_scrolling_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/divider_bottom"
        android:layout_below="@id/divider_top" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:orientation="vertical"
            android:showDividers="middle" >

            <LinearLayout
                android:id="@+id/bill_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_info_bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:id="@+id/bill_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/voucher_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_info_vouchers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:id="@+id/voucher_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@id/divider_bottom"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/bottom_buttons_layout"
        android:background="#3b5998" />

    <LinearLayout
        android:id="@+id/bottom_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/button_add_bill"
            style="@android:style/Widget.Holo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_item"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_add_voucher"
            style="@android:style/Widget.Holo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_voucher"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</RelativeLayout>